stateDiagram-v2
    %% L++ State Diagram: L++ Coverage Analyzer
    [*] --> idle
    idle --> loaded : LOAD [blueprint is None]
    loaded --> loaded : LOAD
    tracking --> loaded : LOAD
    analyzing --> loaded : LOAD
    reporting --> loaded : LOAD
    loaded --> tracking : START [blueprint is not None]
    tracking --> tracking : STATE
    tracking --> tracking : TRANSITION
    tracking --> tracking : GATE
    tracking --> tracking : ACTION
    tracking --> tracking : EVENT
    loaded --> tracking : IMPORT [blueprint is not None && blueprint is not None]
    tracking --> tracking : IMPORT [blueprint is not None]
    tracking --> analyzing : ANALYZE [coverage_data is not None]
    loaded --> analyzing : ANALYZE [blueprint is not None]
    analyzing --> reporting : SUMMARY [metrics is not None]
    analyzing --> reporting : DETAILED [metrics is not None]
    analyzing --> reporting : GAP [metrics is not None]
    analyzing --> reporting : ALL_REPORTS [metrics is not None]
    reporting --> reporting : EXPORT_HTML [metrics is not None]
    analyzing --> reporting : EXPORT_HTML [metrics is not None]
    reporting --> reporting : EXPORT_JSON [metrics is not None]
    analyzing --> reporting : EXPORT_JSON [metrics is not None]
    reporting --> reporting : SUMMARY [metrics is not None]
    reporting --> reporting : DETAILED [metrics is not None]
    reporting --> reporting : GAP [metrics is not None]
    tracking --> loaded : RESET
    analyzing --> loaded : RESET
    reporting --> loaded : RESET
    analyzing --> tracking : BACK
    reporting --> analyzing : BACK
    loaded --> idle : UNLOAD
    tracking --> idle : UNLOAD
    analyzing --> idle : UNLOAD
    reporting --> idle : UNLOAD